5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1679_1879.log
== SUBMITION (2019-05-01 02:13:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- EXECUTION TIME:
0.158096
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 02:13:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- EXECUTION TIME:
0.12745
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 02:13:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- EXECUTION TIME:
0.178341
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 02:13:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- EXECUTION TIME:
0.241673
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 02:14:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- EXECUTION TIME:
0.240643
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 02:14:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- EXECUTION TIME:
0.276041
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 02:14:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- EXECUTION TIME:
0.204911
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 02:14:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- EXECUTION TIME:
0.121715
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 02:14:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- EXECUTION TIME:
0.16493
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1679/1879/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 02:14:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- EXECUTION TIME:
0.19648
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1679/1879/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 02:14:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 02:14:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 02:14:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 02:14:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 02:14:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 02:14:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 02:14:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- EXECUTION TIME:
0.132643
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 02:14:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- EXECUTION TIME:
0.271286
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 02:14:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- EXECUTION TIME:
0.350239
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 02:14:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- EXECUTION TIME:
0.308167
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 02:14:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 02:14:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    H = (ext) - (1/4) * (fal)
NameError: name 'ext' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 02:19:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ext = float(input("digite o numero de horas extras:"))
fal = float (input("digite o numero de horas que o funcionario faltou:"))

H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- EXECUTION TIME:
0.27086
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:39:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ext = float(input("digite o numero de horas extras:"))
fal = float (input("digite o numero de horas que o funcionario faltou:"))

H = (ext) - (1/4) * (fal)

if( H > 400 ):
	grat = 500.00
	
elif( H <= 400):
	grat = 100.00
	
print(ext,"extras e",fal,"de falta")
print("R$",round(grat,2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
